# apps

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: build.yml
DAO/: Cargo.toml
DAO/io/: Cargo.toml
DAO/io/src/: lib.rs
DAO/src/: erc20_functions.rs  ft_messages.rs  lib.rs  payloads.rs  state.rs
DAO/tests/: dao_simple_test.rs  dao_test.rs  funging_proposals.rs  mocks.rs
api/nft-example/: .env  .env-example  package-lock.json  package.json
auction/: Cargo.toml
auction/io/: Cargo.toml
auction/src/: lib.rs
chainlink/client/: Cargo.toml
chainlink/oracle/: Cargo.toml
concert/: Cargo.toml
concert/io/: Cargo.toml
concert/io/src/: lib.rs
concert/src/: lib.rs
concert/tests/: concert_tests.rs  multitoken_proposals.rs  utils.rs
concert/tests/utils/: mod.rs
crowdsale-ico/: Cargo.toml
crowdsale-ico/src/: asserts.rs  lib.rs  messages.rs
crowdsale-ico/tests/: balance_tests.rs  buy_tokens_tests.rs  constants.rs  end_sale_tests.rs  init_ico.rs  init_tests.rs  start_ico_tests.rs
curve-amm/: Cargo.toml  README.md
curve-amm/src/: lib.rs  math.rs  tests.rs
dao/: .binpath  Cargo.toml
dao-light/: Cargo.toml
dao-light/src/: lib.rs  state.rs
dao-light/tests/: dao_simple_test.rs  utils.rs
dao/io/: Cargo.toml
dao/src/: ft_messages.rs  lib.rs  state.rs
dao/tests/: dao_simple_test.rs  funging_proposals.rs  membership_proposals.rs
dutch-auction/: Cargo.toml  README.md
dutch-auction/io/src/: lib.rs
dutch-auction/src/: lib.rs  state.rs
dutch-auction/tests/: dutch_auction_tests.rs
erc1155/: .binpath  Cargo.toml  README.md  readme.md
erc1155/io/: Cargo.toml
erc1155/io/src/: lib.rs
erc1155/src/: base.rs  common.rs  lib.rs
erc1155/tests/: erc1155_tests.rs  tests.rs
escrow/: Cargo.toml
escrow/io/: Cargo.toml
escrow/io/src/: lib.rs
escrow/src/: .lib.rs.swp  lib.rs  tests.rs
escrow/tests/: cancel.rs  confirm.rs  create.rs  deposit.rs  other.rs  refund.rs
escrow/tests/utils/: check.rs  fail.rs  mod.rs
fungible-token/: .binpath  Cargo.toml
fungible-token-messages/: Cargo.toml
fungible-token-messages/src/: lib.rs
fungible-token/io/: Cargo.toml
fungible-token/io/src/: lib.rs
fungible-token/src/: lib.rs  tests.rs
fungible-token/tests/: sample.rs
gear-contract-libraries/: Cargo.toml  lib.rs
gear-contract-libraries/access/: mod.rs  owner_access.rs
gear-contract-libraries/derive_trait/: Cargo.toml
gear-contract-libraries/derive_trait/src/: lib.rs
gear-contract-libraries/erc1155/: erc1155_core.rs  io.rs  mod.rs  state.rs
gear-contract-libraries/multitoken/: io.rs  mtk_core.rs  state.rs
gear-contract-libraries/non_fungible_token/: Cargo.toml  io.rs  mod.rs  nft_core.rs  royalties.rs  state.rs  token.rs  traits.rs
gear-contract-libraries/src/: lib.rs
gear-contract-libraries/src/multitoken/: io.rs  mtk_core.rs  state.rs
gear-contract-libraries/src/non_fungible_token/: nft_core.rs  royalties.rs
gear-contract-libraries/src/utils/derive_traits/: Cargo.toml
gear-contract-libraries/src/utils/derive_traits/src/: lib.rs
gear-contract-libraries/src/utils/macros/: Cargo.toml
gear-contract-libraries/src/utils/macros/src/: lib.rs
gear-contract-libraries/utils/: Cargo.toml
gear-contract-libraries/utils/derive_trait/: Cargo.toml
gear-contract-libraries/utils/derive_trait/src/: lib.rs
gear-contract-libraries/utils/derive_traits/: Cargo.toml
gear-contract-libraries/utils/derive_traits/src/: lib.rs
gear-contract-libraries/utils/macros/: Cargo.toml
gear-contract-libraries/utils/macros/src/: lib.rs
gear-contract-libraries/utils/modifier/: Cargo.toml
gear-contract-libraries/utils/modifier/src/: lib.rs  modifier.rs
gear-contract-libraries/utils/src/: lib.rs
gear-contract-libraries/utils/storage_traits/: Cargo.toml
gear-contract-libraries/utils/storage_traits/src/: lib.rs
gear-feeds-router/: .binpath  Cargo.toml
gear-feeds-router/src/: lib.rs
grc20/: Cargo.toml
grc20/src/: lib.rs
lottery/: .binpath  Cargo.toml
lottery/api/: .env  package-lock.json  package.json
lottery/api/src/: deploy_program.js  send.js
lottery/io/: Cargo.toml
lottery/io/src/: lib.rs
lottery/src/: lib.rs  panic_tests.rs  simple_tests.rs  tests.rs  token_tests.rs
multisig-wallet/: Cargo.toml
multisig-wallet/api/: package-lock.json
multisig-wallet/src/: lib.rs  state.rs
multisig-wallet/tests/: add_owner_tests.rs  change_required_confirmations_count_tests.rs  confirm_transaction_tests.rs  execute_transaction_tests.rs  init_tests.rs  multisig_wallet_tests.rs  remove_owner_tests.rs  replace_owner_tests.rs  revoke_confirmation_tests.rs  submit_transaction_tests.rs
multitoken/: Cargo.toml
multitoken/io/: Cargo.toml
multitoken/src/: lib.rs
multitoken/tests/: mtk_tests.rs
nft/: .binpath  Cargo.toml
nft-example/: .binpath  Cargo.toml
nft-example/io/: Cargo.toml
nft-example/io/src/: lib.rs
nft-example/macro_lib/: Cargo.toml
nft-example/macro_lib/src/: lib.rs
nft-example/src/: lib.rs  payloads.rs  query.rs  royalties.rs  state.rs
nft-example/tests/: nft_tests.rs  sample.rs
nft-marketplace/: Cargo.toml
nft-marketplace/marketplace/: Cargo.toml
nft-marketplace/marketplace/io/: Cargo.toml
nft-marketplace/marketplace/io/src/: lib.rs
nft-marketplace/marketplace/src/: auction.rs  lib.rs  nft_messages.rs  offers.rs  payment.rs  sale.rs  state.rs
nft-marketplace/marketplace/tests/: auction.rs  offers.rs  sale.rs  utils.rs
nft-marketplace/nft/: Cargo.toml
nft-marketplace/src/: nft_messages.rs
nft-marketplace/tests/: auction.rs  offers.rs  sale.rs  utils.rs
nft/action-derive/: Cargo.toml
nft/action-derive/src/: lib.rs
nft/io/: Cargo.toml
nft/io/src/: lib.rs
nft/nft-derive/: Cargo.toml
nft/src/: base.rs  lib.rs
nft/tests/: nft_tests.rs  utils.rs
non-fungible-token/: Cargo.toml
non-fungible-token/src/: base.rs  lib.rs  token.rs
on-chain-nft/: Cargo.toml
on-chain-nft/api/: package-lock.json  package.json
on-chain-nft/src/: lib.rs
ping/: .binpath  Cargo.toml
rmrk/: Cargo.toml
staking/: Cargo.toml
supply-chain/: Cargo.toml
(+95 files in other folders)
