[workspace]
resolver = "2"

members = [
    "dao",
    "dao-light",
    "dutch-auction",
    "erc1155",
    "fungible-token",
    "gear-feeds-router",
    "lottery",
    "multisig-wallet",
    "nft-example",
    "nft-marketplace/marketplace",
    "nft-marketplace/nft",
    "non-fungible-token",
    "ping",
    "escrow",
]
