[package]
name = "auction"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
non-fungible-token = { path = "../non-fungible-token" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
auction-io = { path = "io" }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }