[package]
name = "erc1155"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Gear Technologies"]

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "e81b56a" }
