[package]
name = "fungible-token"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Gear Technologies"]

[dependencies]
gstd = {git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["scale-info"]}
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
ft-io = {path = "io"}

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git"}

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[workspace]
