[package]
name = "gear-contract-libraries"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Gear Technologies"]

[lib]
name = "gear_contract_libraries"
path = "lib.rs"
crate-type = [
    "rlib",
]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["scale-info"]}
derive_trait = { path = "./derive_trait/" }


[workspace]