[package]
name = "nft-example"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["scale-info"]}
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
gear-contract-libraries = { path = "../gear-contract-libraries" }
derive_trait = { path = "../gear-contract-libraries/derive_trait/" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "e81b56a" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[workspace]